--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -88,6 +88,8 @@
 
   <div class="container section">
     <div id="over" class="content-tab">
+
+
       <article class="media notification is-info">
         <div class="content">
           <h1 class="title is-size-4 center">
@@ -105,7 +107,98 @@
         </div>
       </article>
 
-      <div class="columns is-multiline">
+      <div class="container p-3 has-background-info">
+        <div class="columns">
+          <div class="column">
+            <div class="card card-equal-height has-background-info-light">
+              <div class="card-image">
+                <figure class="image is-4by3">
+                  <img
+                    src="https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1055&q=80"
+                    alt="a random image">
+                </figure>
+              </div>
+              <div class="card-content">
+                <p class="title is-4">Tracking Performances</p>
+                <p class="subtitle has-text-link is-6">@dial_n_dine</p>
+                <div class="content">
+                  <p>Call center agent’s priority is making their day-to-day jobs run smoothly. Unlike managers or
+                    high-level executives, agents are less concerned about the data itself. They’re more interested in
+                    how management uses that data. Performance tracking monitoring shapes the environment that agents
+                    work in every day.</p>
+                </div>
+              </div>
+              <div class="card-footer">
+                <p class="card-footer-item">
+                  <span>Share on <a href="#"> Whatsapp <i class="fab fa-whatsapp"></i></a></span>
+                </p>
+                <p class="card-footer-item">
+                  <span>View on <a href="#"> Slack <i class="fab fa-slack"></i></a></span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="card card-equal-height has-background-info-light">
+              <div class="card-image">
+                <figure class="image is-4by3">
+                  <img
+                    src="https://images.unsplash.com/photo-1553877522-43269d4ea984?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+                    alt="a random image">
+                </figure>
+              </div>
+              <div class="card-content">
+                <p class="title is-4">Importance of Feedback</p>
+                <p class="subtitle has-text-link is-6">@dial_n_dine</p>
+                <div class="content">
+                  <p> Working as an agent is a stressful endeavor, and it’s up to managers to cultivate a positive
+                    working atmosphere, foster a sense of ownership, motivate the team to succeed, and most importantly,
+                    to stay informed on contact center best practices.With technology advances now make it easier to
+                    measure and optimize operations.</p>
+                </div>
+              </div>
+              <div class="card-footer">
+                <p class="card-footer-item">
+                  <span>Share on <a href="#"> Whatsapp <i class="fab fa-whatsapp"></i></a></span>
+                </p>
+                <p class="card-footer-item">
+                  <span>View on <a href="#"> Slack <i class="fab fa-slack"></i></a></span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="card card-equal-height  has-background-info-light">
+              <div class="card-image">
+                <figure class="image is-4by3">
+                  <img
+                    src="https://images.unsplash.com/photo-1622447036013-a7e7367759c3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80">
+                </figure>
+              </div>
+              <div class="card-content">
+                <p class="title is-4">Advantages of Cloud Office</p>
+                <p class="subtitle has-text-link is-6">@sandsqa</p>
+                <div class="content">
+                  <p>Cloud office offers our call center many benefits. It allows us to update and give feedback on what
+                    is essentially with more flexibility and transparency. With the growing number of web-enabled
+                    devices used in today's business environment (e.g. laptops), access to updates and reports is even
+                    easier.</p>
+                </div>
+              </div>
+              <div class="card-footer">
+                <p class="card-footer-item">
+                  <span>Share on <a href="#"> Whatsapp <i class="fab fa-whatsapp"></i></a></span>
+                </p>
+                <p class="card-footer-item">
+                  <span>View on <a href="#"> Slack <i class="fab fa-slack"></i></a></span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div><br>
+
+      <div class="columns is-multiline has-background-info-light">
         <div class="column is-one-third">
           <article class="message is-danger">
             <div class="message-body">
@@ -189,12 +282,10 @@
         </div>
 
         <div class="column is-one-third">
-          <article class="message is-info">
-            <div class="message-header center">
-              <p>Projects</p>
-            </div>
-            <div class="message-body">
-              <p>
+          <article class="message is-dark">
+            <div class="message-body has-background-info-light">
+              <p class="subtitle"><b>Projects</b></p>
+              <p class="has-text-info">
                 A better way for agents to grow is by letting them know where
                 they excel and needs to improve?
               </p>
@@ -208,8 +299,35 @@
     <!----------End of Overview------------->
 
     <div id="perf" class="content-tab" style="display: none">
-      <div class="columns">
 
+      <div class="message is-info">
+        <div class="message-header">
+          <h2 class="title center">Performances</h2>
+        </div>
+        <div class="message-body">
+          <article class="media">
+            <figure class="media-left">
+              <p class="image is-64x64">
+                <img src="./images/Dial n Dine Logo.png">
+              </p>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Sands QA</strong> <small>@sandsqa</small>
+                  <br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque
+                  tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio.<br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque
+                  tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio.
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+
+      <div class="columns">
         <div class="column is-half">
           <article class="message is-link">
             <div class="message-header center">
@@ -232,11 +350,9 @@
             </div>
 
             <div class="message-body">
-              <div class="google-data-studio">
-                <iframe width="600" height="350"
-                  src="https://datastudio.google.com/embed/reporting/d262457c-400c-44fa-b9a8-28250071e3c6/page/8z9AC"
-                  frameborder="0" style="border:0" allowfullscreen></iframe>
-              </div>
+              <figure class="image is-16by9">
+                <img src="./images/Dash1.png" alt="Dashboard" sizes="" srcset="">
+              </figure>
             </div>
           </article>
         </div>
@@ -263,11 +379,9 @@
             </div>
 
             <div class="message-body">
-              <div class="google-data-studio">
-                <iframe width="600" height="1200"
-                  src="https://datastudio.google.com/embed/reporting/54d573f2-fe3a-463a-8b77-d3f11ee89488/page/CppnB"
-                  frameborder="0" style="border:0;" allowfullscreen></iframe>
-              </div>
+              <figure class="image is-16by9">
+                <img src="./images/Dash2.png" alt="Dashboard" sizes="" srcset="">
+              </figure>
             </div>
           </article>
         </div>
@@ -296,11 +410,9 @@
             </div>
 
             <div class="message-body">
-              <div class="google-data-studio">
-                <iframe width="600" height="450"
-                  src="https://datastudio.google.com/embed/reporting/968349c2-602c-4f97-a6b4-01d1c181d151/page/RQUPC"
-                  frameborder="0" style="border:0" allowfullscreen></iframe>
-              </div>
+              <figure class="image is-16by9">
+                <img src="./images/Dash3.png" alt="Dashboard" sizes="" srcset="">
+              </figure>
             </div>
           </article>
         </div>
@@ -327,11 +439,9 @@
             </div>
 
             <div class="message-body">
-              <div class="google-data-studio">
-                <iframe width="600" height="450"
-                  src="https://datastudio.google.com/embed/reporting/87519d28-32cd-4408-813d-058e8ddd3887/page/hQAwB"
-                  frameborder="0" style="border:0" allowfullscreen></iframe>
-              </div>
+              <figure class="image is-16by9">
+                <img src="./images/Dash4.png" alt="Dashboard" sizes="" srcset="">
+              </figure>
             </div>
           </article>
         </div>
@@ -783,6 +893,7 @@
         </div>
       </div>
     </div>
+    <!------------------------End of Incentive------------------------->
 
     <div id="sched" class="content-tab" style="display: none">
       <p>
@@ -798,6 +909,7 @@
         Aldus PageMaker including versions of Lorem Ipsum.
       </p>
     </div>
+    <!-----------------------End of Schedules--------------------------->
 
     <div id="news" class="content-tab" style="display: none">
       <p>
@@ -816,6 +928,94 @@
   </div>
 
   <footer class="footer has-background-link-light">
+
+    <div class="container">
+      <div class="columns is-multiline is-centered">
+        <div class="column is-one-fifth">
+          <div class="columns">
+            <div class="column">
+              <a class="is-left" href="#" class="logo is-flex is-centered">
+                <img alt="Dial & Dine" src="./images/Dial n Dine Logo.png" height="35" width="50">
+              </a>
+            </div>
+            <div class="column is-three-quarters">
+              <p class="is-size-7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quas illo
+                praesentium omnis atque repudiandae, ipsa facilis necessitatibus accusantium. </p>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <h3 class="pb-1 mb-0 is-size-6 has-text-weight-bold">Company</h3>
+          <nav class="footer-nav">
+            <ul>
+              <li>
+                <a href="#">About Us</a>
+              </li>
+              <li>
+                <a href="#">Contact Us</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="column">
+          <h3 class="pb-1 mb-0 is-size-6 has-text-weight-bold">Help &amp; Resources</h3>
+          <nav class="footer-nav">
+            <ul>
+              <li>
+                <a href="#">Knowledge Center</a>
+              </li>
+              <li>
+                <a href="#">Modules</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="column">
+          <h3 class="pb-1 mb-0 is-size-6 has-text-weight-bold">Legal</h3>
+          <nav class="footer-nav">
+            <ul>
+              <li>
+                <a href="#">Policies & Procedure</a>
+              </li>
+              <li>
+                <a href="#">Terms & Conditions</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="column">
+          <h3 class="pb-1 mb-0 is-size-6 has-text-weight-bold">Resources</h3>
+          <nav class="footer-nav">
+            <ul>
+              <li>
+                <a href="#">E-Learning</a>
+              </li>
+              <li>
+                <a href="#">References</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <hr />
+
+    <div class="social-links is-flex mt-3 center">
+      <a href="#">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="#">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a href="#">
+        <i class="fa fa-rss"></i>
+      </a>
+      <a href="#">
+        <i class="fa fa-envelope"></i>
+      </a>
+    </div>
+    <hr />
+
     <div class="content has-text-centered">
       <p>
         <strong>MyKPI</strong> by
