--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
             <div class="card card-equal-height has-background-info-light">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img
-                    src="https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1055&q=80"
-                    alt="a random image">
+                  <img src="./images/tracking.jpg">
                 </figure>
               </div>
               <div class="card-content">
@@ -142,9 +140,7 @@
             <div class="card card-equal-height has-background-info-light">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img
-                    src="https://images.unsplash.com/photo-1553877522-43269d4ea984?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                    alt="a random image">
+                  <img src="./images/feedback.png" style="max-width: 1000px;">
                 </figure>
               </div>
               <div class="card-content">
@@ -171,8 +167,7 @@
             <div class="card card-equal-height  has-background-info-light">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img
-                    src="https://images.unsplash.com/photo-1622447036013-a7e7367759c3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80">
+                  <img src="./images/advantage.png" style="max-width: 1000px;">
                 </figure>
               </div>
               <div class="card-content">
@@ -197,102 +192,104 @@
           </div>
         </div>
       </div><br>
+      <!--------------------Section---------------->
+      <div class="content p-5 has-background-info">
+        <div class="columns is-multiline has-background-info-light">
+          <div class="column is-one-third">
+            <article class="message is-danger">
+              <div class="message-body">
+                <p class="subtitle has-text-danger"><b>Scheduling</b></p>
+                <p>
+                  Having the ability to work flexible hours empowers your
+                  employees. They can have better control of their lives in
+                  these uncertain times.
+                  <img src="./images/schedule.png" style="max-width: 220px" class="center-img" />
+                </p>
+              </div>
+            </article>
+          </div>
 
-      <div class="columns is-multiline has-background-info-light">
-        <div class="column is-one-third">
-          <article class="message is-danger">
-            <div class="message-body">
-              <p class="subtitle has-text-danger"><b>Scheduling</b></p>
-              <p>
-                Having the ability to work flexible hours empowers your
-                employees. They can have better control of their lives in
-                these uncertain times.
-                <img src="./images/schedule.png" style="max-width: 220px" class="center-img" />
-              </p>
-            </div>
-          </article>
-        </div>
+          <div class="column is-one-third">
+            <article class="message is-info">
+              <div class="message-header center">
+                <p>Performances</p>
+              </div>
+              <div class="message-body">
+                <p>
+                  Key performance indicators (KPIs) are measurable, monitorable,
+                  and visible signs that a task has been achieved or not. KPIs
+                  are one of the most powerful performance management tools in
+                  growing our call center when properly used.
+                </p>
+                <img src="./images/performances.png" style="max-width: 235px" class="center-img" />
+              </div>
+            </article>
+          </div>
 
-        <div class="column is-one-third">
-          <article class="message is-info">
-            <div class="message-header center">
-              <p>Performances</p>
-            </div>
-            <div class="message-body">
-              <p>
-                Key performance indicators (KPIs) are measurable, monitorable,
-                and visible signs that a task has been achieved or not. KPIs
-                are one of the most powerful performance management tools in
-                growing our call center when properly used.
-              </p>
-              <img src="./images/performances.png" style="max-width: 235px" class="center-img" />
-            </div>
-          </article>
-        </div>
-
-        <div class="column is-one-third">
-          <article class="message is-info">
-            <div class="message-header center">
-              <p>Team</p>
-            </div>
-            <div class="message-body">
-              <p> Healthy teams have team members that feel good about each other.
-                This in turn improves <a>customer service,</a> increases
-                customer satisfaction, and builds strong customer loyalty. More
-                important, it boosts profits.Strong teams focus on results — not
-                processes, reaching team goals and completing activities
-                designed to achieve them.Progress must be assesed toward
-                achieving team goals periodically. This includes identifying
-                barriers to achieving these goals.</p><br>
-              <div class="columns has-background-primary-light">
-                <div class="column center">
-                  <i class="fas fa-2x fa-users"></i>
-                </div>
-                <div class="column center">
-                  <i class="far fa-2x fa-file-excel"></i></i>
-                </div>
-                <div class="column center">
-                  <i class="fas fa-2x fa-signal"></i>
+          <div class="column is-one-third">
+            <article class="message is-info">
+              <div class="message-header center">
+                <p>Team</p>
+              </div>
+              <div class="message-body">
+                <p> Healthy teams have team members that feel good about each other.
+                  This in turn improves <a>customer service,</a> increases
+                  customer satisfaction, and builds strong customer loyalty. More
+                  important, it boosts profits.Strong teams focus on results — not
+                  processes, reaching team goals and completing activities
+                  designed to achieve them.Progress must be assesed toward
+                  achieving team goals periodically. This includes identifying
+                  barriers to achieving these goals.</p><br>
+                <div class="columns has-background-primary-light">
+                  <div class="column center">
+                    <i class="fas fa-2x fa-users"></i>
+                  </div>
+                  <div class="column center">
+                    <i class="far fa-2x fa-file-excel"></i></i>
+                  </div>
+                  <div class="column center">
+                    <i class="fas fa-2x fa-signal"></i>
+                  </div>
                 </div>
               </div>
-            </div>
-          </article>
-        </div>
+            </article>
+          </div>
 
-        <div class="column is-two-thirds">
-          <article class="message is-info">
-            <div class="message-body">
-              <p class="subtitle has-text-info"><b>Incentives</b></p>
-              Working as a <strong> center agent</strong> can seem like a
-              tedious, thankless job. In some cases, agents spend hours
-              talking with people who don’t want to be on the phone any more
-              than the agents themselves do. Even in the best circumstances —
-              where customers are calling to purchase high-demand products —
-              not only can each day look the same…each hour can as well. So
-              it’s not surprising that some call center agents take an
-              <em>“eight and skate”</em> approach to their shifts. It’s
-              equally unsurprising that some <strong>call centers</strong> are
-              <u>satisfied</u> to settle for employees who coast through the
-              days as long as they’re not directly alienating customers. But
-              difficult is far from impossible. It’s a matter of identifying
-              the behaviors that impact the bottom line and then finding the
-              right way to implement a call center incentive program
-            </div>
-          </article>
-        </div>
+          <div class="column is-two-thirds">
+            <article class="message is-info">
+              <div class="message-body">
+                <p class="subtitle has-text-info"><b>Incentives</b></p>
+                Working as a <strong> center agent</strong> can seem like a
+                tedious, thankless job. In some cases, agents spend hours
+                talking with people who don’t want to be on the phone any more
+                than the agents themselves do. Even in the best circumstances —
+                where customers are calling to purchase high-demand products —
+                not only can each day look the same…each hour can as well. So
+                it’s not surprising that some call center agents take an
+                <em>“eight and skate”</em> approach to their shifts. It’s
+                equally unsurprising that some <strong>call centers</strong> are
+                <u>satisfied</u> to settle for employees who coast through the
+                days as long as they’re not directly alienating customers. But
+                difficult is far from impossible. It’s a matter of identifying
+                the behaviors that impact the bottom line and then finding the
+                right way to implement a call center incentive program
+              </div>
+            </article>
+          </div>
 
-        <div class="column is-one-third">
-          <article class="message is-dark">
-            <div class="message-body has-background-info-light">
-              <p class="subtitle"><b>Projects</b></p>
-              <p class="has-text-info">
-                A better way for agents to grow is by letting them know where
-                they excel and needs to improve?
-              </p>
-              <br />
-              <img src="./images/projects.png" style="max-width: 209px" class="center-img" />
-            </div>
-          </article>
+          <div class="column is-one-third">
+            <article class="message is-dark">
+              <div class="message-body has-background-info-light">
+                <p class="subtitle"><b>Projects</b></p>
+                <p class="has-text-info">
+                  A better way for agents to grow is by letting them know where
+                  they excel and needs to improve?
+                </p>
+                <br />
+                <img src="./images/projects.png" style="max-width: 209px" class="center-img" />
+              </div>
+            </article>
+          </div>
         </div>
       </div>
     </div>
