--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                   <div class="card has-background-info">
                     <header class="card-header">
                       <p class="card-header-title center">
-                        What Ohters Say
+                        What Others Say
                       </p>
                     </header>
                     <div class="card-content has-text-white">
@@ -542,13 +542,13 @@
             <div class="level-left">
               <div class="level-item">
                 <p class="subtitle is-5">
-                  <strong>6</strong> posts
+                  <strong>6</strong> projects
                 </p>
               </div>
               <div class="level-item">
                 <div class="field has-addons">
                   <p class="control">
-                    <input class="input" type="text" placeholder="Find a post">
+                    <input class="input" type="text" placeholder="Find a project">
                   </p>
                   <p class="control">
                     <button class="button">
