--- a/index.html
+++ b/index.html
@@ -112,15 +112,14 @@
         <div class="container p-3 has-background-info">
           <div class="columns">
             <div class="column">
-              <div class="card card-equal-height has-background-info-light">
+              <div class="card card-equal-height has-background-info-light is-size-7">
                 <div class="card-image">
                   <figure class="image is-4by3">
                     <img src="./images/tracking.jpg">
                   </figure>
                 </div>
                 <div class="card-content">
-                  <p class="title is-4">Tracking Performances</p>
-                  <p class="subtitle has-text-link is-6">@dial_n_dine</p>
+                  <p class="title is-4 center">Tracking Performances</p>
                   <div class="content">
                     <p>Call center agent’s priority is making their day-to-day jobs run smoothly. Unlike managers or
                       high-level executives, agents are less concerned about the data itself. They’re more interested in
@@ -139,15 +138,14 @@
               </div>
             </div>
             <div class="column">
-              <div class="card card-equal-height has-background-info-light">
+              <div class="card card-equal-height has-background-info-light is-size-7">
                 <div class="card-image">
                   <figure class="image is-4by3">
                     <img src="./images/feedback.png" style="max-width: 1000px;">
                   </figure>
                 </div>
                 <div class="card-content">
-                  <p class="title is-4">Importance of Feedback</p>
-                  <p class="subtitle has-text-link is-6">@dial_n_dine</p>
+                  <p class="title is-4 center">Importance of Feedback</p>
                   <div class="content">
                     <p> Working as an agent is a stressful endeavor, and it’s up to managers to cultivate a positive
                       working atmosphere, foster a sense of ownership, motivate the team to succeed, and most
@@ -167,15 +165,14 @@
               </div>
             </div>
             <div class="column">
-              <div class="card card-equal-height  has-background-info-light">
+              <div class="card card-equal-height  has-background-info-light is-size-7">
                 <div class="card-image">
                   <figure class="image is-4by3">
                     <img src="./images/advantage.png" style="max-width: 1000px;">
                   </figure>
                 </div>
                 <div class="card-content">
-                  <p class="title is-4">Advantages of Cloud Office</p>
-                  <p class="subtitle has-text-link is-6">@sandsqa</p>
+                  <p class="title is-4 center">Advantages of Cloud Office</p>
                   <div class="content">
                     <p>Cloud office offers our call center many benefits. It allows us to update and give feedback on
                       what
