--- a/index.html
+++ b/index.html
@@ -1056,20 +1056,74 @@
       </p>
     </div>
     <!-----------------------End of Schedules--------------------------->
+    <div id="news" class="content-tab has-background-info-light" style="display: none">
 
-    <div id="news" class="content-tab" style="display: none">
-      <p>
-        test2<br />
-        Details Lorem Ipsum is simply dummy text of the printing and
-        typesetting industry. Lorem Ipsum has been the industry's standard
-        dummy text ever since the 1500s, when an unknown printer took a galley
-        of type and scrambled it to make a type specimen book. It has survived
-        not only five centuries, but also the leap into electronic
-        typesetting, remaining essentially unchanged. It was popularised in
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum
-        passages, and more recently with desktop publishing software like
-        Aldus PageMaker including versions of Lorem Ipsum.
-      </p>
+      <img class="center pt-5"
+        src="https://sands_45.w3spaces.com/kevin-bhagat-zNRITe8NPqY-unsplash.jpg?bypass-cache=1624226144" alt="News"
+        style="max-width: 700px;height: auto;">
+      <div class="notification">
+        <h1 class="subtitle center is-size-3">Here is your weekly digest</h1>
+        <p class="center">
+          You’ve put lots of thought into your employee newsletter.You hit ‘send’ to all-staff……and patiently wait to
+          hear what your colleagues think.But, at the end of the day, all you hear are crickets.Did they like the
+          content?<br>
+          Did they even read your newsletter (or did it go straight to trash)? 😬<br>
+          It’s hard to captivate your employees when there are so many different channels competing for their
+          attention.On top of that, employees might be spread out in different offices or working remotely, and you
+          really need them to read your newsletter to get on the same page.So how do you make sure they read it?To
+          transform your employees from apathetic newsletter deleters to engaged readers, consider what kind of
+          content they really want.Your newsletter can’t all be corporate announcements. Like any great piece of
+          content, there has to be variety
+          to capture—and keep—your readers’ attention.The most engaging internal newsletters feature a mix of
+          employee-focused content, organization-focused
+          content, and customer-focused content.Want to strike that balance? Well, continue reading.
+        </p><br>
+        <button class="button is-large is-info center">READ MORE</button>
+        <hr>
+        <div class="columns">
+
+          <div id="news" class="column is-half">
+            <img class="pt-5"
+              src="https://sands_45.w3spaces.com/marvin-meyer-SYTO3xs06fU-unsplash.jpg?bypass-cache=1624260822"
+              alt="News" style="max-width: 300px;height: auto;">
+            <h1 class="subtitle center  is-size-3">Importance of Brainstorming</h1>
+            <p>Brainstorming is a way to provide call centers the means to generate new ideas and even tackle complex
+              problems. Depending on what the situation warrants, brainstorming sessions can be conducted in small
+              groups, large groups or individually. In addition, call centers can choose one of several brainstorming
+              techniques to reach their goals.</p>
+          </div>
+
+          <div id="news" class="column is-half">
+            <img class="pt-5"
+              src="https://sands_45.w3spaces.com/marvin-meyer-SYTO3xs06fU-unsplash.jpg?bypass-cache=1624260822"
+              alt="News" style="max-width: 300px;height: auto;">
+            <h1 class="subtitle center is-size-3">Is Teamwork That Crucial ?</h1>
+            <p>Championship teams have something in common across all sports: they work together as a machine. In her
+              recent article, Lynn Hunsaker says that companies need to pull together and collaborate like sports teams
+              across all departments in order to increase customer loyalty, revenue, and other valuable components of
+              success. One specific area where collaboration across all levels of the company is important is the
+              customer experience. Without collaboration, the customer experience will fail.</p>
+          </div>
+        </div>
+
+        <img class="center pt-5" src="./images/menu-update.png" alt="News" style="max-width: 500px;height: auto;">
+        <div class="notification">
+          <h1 class="subtitle center is-size-3">Updates</h1>
+          <p class="center">
+            By now you should know that we deliver for mahala! We’ve been giving you free delivery since day one, so you
+            might as well call us amabhoza of this delivery game. Whether you call in or order online, you can get an
+            oh-so-rhalising pizza delivered to your door! And when your nearest Debonairs Pizza is within a 3km driving
+            distance, you get your fave pizza delivered for free!<br>
+            But there’s more than one way to get a box of your fave pizza onto your table. We have 3 ways for you to
+            order from Debonairs Pizza. Choose the one that works best for you.
+          </p><br>
+          <button class="button is-large is-info center">Browse Menus</button>
+          <p class="center">For intsant Updates Check-out our Slack Channel Here: <button class="button is-small"><a
+                href="#"><i class="fab fa-slack"></a></i></button></p>
+        </div>
+
+
+      </div>
     </div>
   </div>
 
