--- a/index.html
+++ b/index.html
@@ -1068,8 +1068,8 @@
         <h1 class="subtitle center is-size-3">Here is your weekly digest</h1>
         <p class="center">
           You’ve put lots of thought into your employee newsletter.You hit ‘send’ to all-staff……and patiently wait to
-          hear what your colleagues think.But, at the end of the day, all you hear are crickets.Did they like the
-          content?<br>
+          hear what your colleagues think.But, at the end of the day, all you hear are crickets.<br>
+          Did they like the content?<br>
           Did they even read your newsletter (or did it go straight to trash)? 😬<br>
           It’s hard to captivate your employees when there are so many different channels competing for their
           attention.On top of that, employees might be spread out in different offices or working remotely, and you
