--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="./images/favicon.ico.ico" />
-  <link href="https://assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -52,7 +51,7 @@
       </nav>
     </div>
 
-    <div class="hero-body">
+    <div id="back-to-top" class="hero-body">
       <div class="container has-text-centered">
         <p class="title">Our Cloud Office</p>
         <p class="subtitle is-size-6"><i>"The art of Performance"</i></p>
@@ -279,7 +278,7 @@
             </div>
 
             <div class="column is-one-third">
-              <article class="message is-dark">
+              <article id="pro" class="message is-dark">
                 <div class="message-body has-background-info-light">
                   <p class="subtitle"><b>Projects</b></p>
                   <p class="has-text-info">
@@ -1128,6 +1127,8 @@
   </div>
 
   <footer class="footer has-background-link-light">
+    <button id="top" class="button center"><a href="#back-to-top"><i
+          class="far fa-arrow-alt-circle-up"></i></a></button>
 
     <div class="container">
       <div class="columns is-multiline is-centered">
@@ -1239,7 +1240,6 @@
   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-a11y="true"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <script src="./script.js"></script>
-  <script src="https://assets.juicer.io/embed.js" type="text/javascript"></script>
 </body>
 
 </html>
